--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A good company that hear the voice of employees!",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "jest"
   },
   "author": "Mahmoud Mehri",
   "license": "ISC",
@@ -15,6 +15,8 @@
     "chai": "^4.3.6",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.9",
+    "hardhat-jest-plugin": "^0.0.6",
+    "jest": "^28.1.1",
     "mocha": "^10.0.0"
   }
 }
